fix: Set animation of filter to forwards to prevent flicker on close

--- a/app/javascript/scss/elements/_filter.scss
+++ b/app/javascript/scss/elements/_filter.scss
@@ -36,7 +36,7 @@
   background: $bg-dark;
   box-shadow: $shadow;
   transition: box-shadow var(--animation-duration);
-  animation: fade-in-filter-content var(--animation-duration, 0ms);
+  animation: fade-in-filter-content var(--animation-duration, 0ms) forwards;
 
   &::after {
     content: "";
@@ -60,7 +60,7 @@
 
   .fading-out & {
     overflow: hidden;
-    animation: fade-out-filter-content var(--animation-duration, 0ms);
+    animation: fade-out-filter-content var(--animation-duration, 0ms) forwards;
   }
 }
 
